# PlayAndroid

./: .gitignore  Features.md  FunctionList.md  README.md  UpdateLog.md  build.gradle  gradle.properties  keystore.properties  settings.gradle  version.gradle
app/: build.gradle  proguard.cfg
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: theme_enter.xml  theme_exit.xml
app/src/main/res/drawable/: alarm_clock.xml  android_crash.xml  android_error.xml  android_ok.xml  android_splash.xml  app_launcher.xml  app_launcher2.xml  app_list.xml  brightness.xml  calendar.xml  camera.xml  clock.xml  contact.xml  flashlight.xml  gank.xml  layer_app_launcher.xml  layer_app_launcher_round.xml  layer_splash_screen.xml  mini_browser.xml  music.xml  number_0.xml  number_1.xml  number_10.xml  number_11.xml  number_2.xml  number_3.xml  number_4.xml  number_5.xml  number_7.xml  number_8.xml  number_9.xml  number_attribution.xml  qr_code.xml  screenshot.xml  seek_bar_progress_drawable.xml  shape_round_corner_bg_12dp.xml  shape_round_corner_bg_5dp.xml  shape_round_corner_bg_5dp_blue.xml  system_setting.xml  timer.xml  (+19 more)
app/src/main/res/layout/: activity_advertise.xml  activity_feature_detail.xml  activity_gank.xml  activity_main.xml  activity_music.xml  activity_nav_detail.xml  activity_settings.xml  activity_web_view.xml  common_toolbar.xml  fragment_bright.xml  fragment_calendar.xml  fragment_choose_pic.xml  fragment_clock.xml  fragment_gank_detail.xml  fragment_main_home.xml  item_aosp.xml  item_common_img.xml  item_common_tv.xml  item_feature.xml  item_gank_news.xml  item_media_item.xml  (+3 more)
base/: build.gradle
base/src/main/: AndroidManifest.xml
base/src/main/jni/: Android.mk
camera/: build.gradle
camera/src/main/: AndroidManifest.xml
decompress/: CMakeLists.txt  build.gradle
decompress/src/androidTest/java/com/fendoudebb/decompress/: ExampleInstrumentedTest.java
decompress/src/main/: AndroidManifest.xml
decompress/src/main/cpp/: decompress7z.cpp
decompress/src/main/res/values/: strings.xml
decompress/src/test/java/com/fendoudebb/decompress/: ExampleUnitTest.java
doc-zh/: Features-zh.md  FunctionList-zh.md  README-zh.md  UpdateLog-zh.md
extractor/: CMakeLists.txt
extractor/src/main/: AndroidManifest.xml
extractor/src/main/cpp/: extract7z.cpp
gradle/wrapper/: gradle-wrapper.properties
number/: build.gradle
number/src/main/: AndroidManifest.xml
number_address/src/main/: AndroidManifest.xml
number_address/src/main/assets/: address
widget/: build.gradle
widget/src/main/: AndroidManifest.xml
(+226 files in other folders)
